Pushing bugfix for CSS overlap

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -306,23 +306,8 @@ body, html {margin:0; padding:0}
     font-size: 25px !important;
 }
 
-.content {
-  position: absolute;
-  max-width: 600px;
-  top: 20%;
-  padding: 60px 120px;
-  margin: 0px 0px 0px -3px;
-  font-size: 50px;
-  font-weight: bold;
-  font-family: 'Playfair Display', serif;
-}
-
 .content Header {
   font-size: 50px !important;
-}
-.description {
-  font-size: 30px !important;
-  font-weight: normal;
 }
 
 .img-background {
@@ -337,9 +322,21 @@ body, html {margin:0; padding:0}
   position: relative;
 }
 
-h1, h2, h3, h4, myHeader {
+myHeader {
   font-family: 'Playfair Display', serif !important;
 }
+
+.content2 {
+  position: absolute;
+  max-width: 600px;
+  top: 20%;
+  padding: 60px 120px;
+  margin: 0px 0px 0px -3px;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: 'Playfair Display', serif;
+}
+
 
 .featured-clubs {
   position: absolute;
